--- a/media/site/index.html
+++ b/media/site/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="" content="">
-    <title>BYTE-MD</title>
+    <title>BYTE-LITE</title>
     <link rel="stylesheet" href="/style.css" type="text/css" media="all" />
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Cod3Uchiha/TKM-bot/main/media/chrono.webp" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/HyHamza/HyHamza/main/Images/BYTE-MD-LITE.jpeg" type="image/x-icon" />
   </head>
   <body>
     <h1>Bot is active</h1>
